# acpr

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  fastagent.jsonl
.github/workflows/: ci.yml
examples/: acp_integration.rs  bytestreams_integration.rs  client_connection.rs  complete_interface.rs  sacp_integration.rs  simple.rs
src/: agent.rs  cli.rs  lib.rs  main.rs  registry.rs
tests/: integration_tests.rs
tests/fixtures/: test-registry.json
