[package]
name = "acpr"
version = "0.1.0"
edition = "2024"
description = "Run agents from the ACP registry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikomat/acpr"
homepage = "https://github.com/nikomat/acpr"
documentation = "https://docs.rs/acpr"
keywords = ["acp", "agent", "cli", "registry"]
categories = ["command-line-utilities"]

[package.metadata]

[package.metadata.battery-pack]

[package.metadata.battery-pack.cli-battery-pack]
features = ["default"]
managed-deps = ["anstream", "anstyle", "anstyle-hyperlink", "anyhow", "clap", "colorchoice-clap", "dialoguer", "human-panic", "snapbox", "supports-hyperlinks", "wild"]

[[bin]]
name = "acpr"
path = "src/main.rs"

[lib]
name = "acpr"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cli-battery-pack = "0.5.1"
dirs = "6.0.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tokio = { version = "1.52.1", features = ["full"] }
zip = "8.5.1"
anstream = "1.0.0"
anstyle = "1.0.14"
anstyle-hyperlink = "1.0.2"
anyhow = "1"
colorchoice-clap = "1.0.8"
dialoguer = "0.11"
human-panic = "2.0.8"
supports-hyperlinks = "3.2.0"
wild = "2.2.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
snapbox = { version = "1.2.1", features = ["cmd", "term-svg"] }

[build-dependencies]
cli-battery-pack = "0.5.1"
