[package]
name = "acpr"
version = "0.2.0"
edition = "2024"
description = "Run agents from the ACP registry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentclientprotocol/acpr"
homepage = "https://github.com/agentclientprotocol/acpr"
documentation = "https://docs.rs/acpr"
keywords = ["acp", "agent", "cli", "registry"]
categories = ["command-line-utilities"]

[[bin]]
name = "acpr"
path = "src/main.rs"

[lib]
name = "acpr"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "sacp_integration"
path = "examples/sacp_integration.rs"

[[example]]
name = "complete_interface"
path = "examples/complete_interface.rs"

[[example]]
name = "bytestreams_integration"
path = "examples/bytestreams_integration.rs"

[[example]]
name = "client_connection"
path = "examples/client_connection.rs"

[dependencies]
anstyle = "1.0.14"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["json"] }
sacp = "11.0.0"
sacp-tokio = "11.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tokio = { version = "1.52.1", features = ["rt", "macros", "io-util", "process", "fs"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.5.1"

[dev-dependencies]
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
